# seki

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  LICENSE  README.md  crate-hashes.json  flake.nix
docs/: PLEME-IO-SEGMENTS.md  SEKI.md
module/: README.md
seki/: Cargo.toml
seki-core/: Cargo.toml
seki-core/src/: context.rs  error.rs  format.rs  init.rs  lib.rs  module.rs  palette.rs  render.rs  segment.rs  style.rs
seki-core/src/config/: arnes_cache.rs  blackmatter.rs  caixa.rs  character.rs  cmd_duration.rs  cofre_tier.rs  custom.rs  directory.rs  disabled.rs  engenho.rs  env_var.rs  fleet_node.rs  git_branch.rs  git_status.rs  hostname.rs  ishou_theme.rs  kasou_vm.rs  kindling_posture.rs  lang.rs  mado_session.rs  mod.rs  nix_flake_drift.rs  nix_shell.rs  rust.rs  shigoto.rs  shikumi_config.rs  shikumi_tier.rs  stylix.rs  tatara_workload.rs  tear.rs  tend.rs  vigy.rs
seki-modules/: Cargo.toml
seki-modules/src/: arnes_cache.rs  blackmatter.rs  caixa.rs  cmd_duration.rs  cofre_tier.rs  custom.rs  directory.rs  engenho.rs  env_var.rs  fleet_node.rs  git_branch.rs  git_status.rs  hostname.rs  ishou_theme.rs  kasou_vm.rs  kindling_posture.rs  lib.rs  mado_session.rs  nix_flake_drift.rs  nix_shell.rs  rust.rs  shigoto.rs  shikumi_config.rs  shikumi_tier.rs  stylix.rs  tatara_workload.rs  tear.rs  tend.rs  vigy.rs
seki-shikumi/: Cargo.toml
seki-shikumi/src/: blzsh_parity.rs  borealis.rs  borealis_config.rs  companion_config.rs  discovered.rs  lib.rs  vellum.rs  vellum_config.rs
seki/examples/: blzsh-parity.yaml
seki/src/: daemon.rs  main.rs
