[workspace]
resolver = "2"
members = ["seki", "seki-core", "seki-modules", "seki-shikumi"]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/seki"
homepage = "https://github.com/pleme-io/seki"
authors = ["pleme-io"]
description = "seki (席) — typed prompt renderer, starship fork wrapped in the pleme-io stack"

[workspace.dependencies]
# Internal members
seki-core = { path = "seki-core", version = "0.1.1" }
seki-modules = { path = "seki-modules", version = "0.1.1" }
seki-shikumi = { path = "seki-shikumi", version = "0.1.1" }

# External deps shared across the workspace
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
yansi = "1"
unicode-width = "0.2"
shikumi = { git = "https://github.com/pleme-io/shikumi", features = ["cli"] }
# ishou-tokens — fleet design-system token source. Pulled at compile
# time by `seki_core::config::ishou_theme` so the active prescribed
# FleetTheme variant surfaces in the prompt without any runtime
# probe. Git source (not yet on crates.io).
ishou-tokens = { git = "https://github.com/pleme-io/ishou" }

[workspace.lints]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
