[package]
name = "seki-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "seki-core — typed config + segment rendering engine"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yansi.workspace = true
unicode-width.workspace = true
# ishou-tokens — fleet design-system tokens. Used by
# `config::ishou_theme` to surface the prescribed FleetTheme variant
# in the prompt at compile time (no runtime probe). Pure-data dep;
# no GPU/wgpu feature pulled in.
ishou-tokens.workspace = true

[lints]
workspace = true
