[package]
name = "seki-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "seki-modules — typed Module impls for each shipped segment"

[dependencies]
seki-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[lints]
workspace = true
