[package]
name = "seki-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "seki-modules — typed Module impls for each shipped segment"

[dependencies]
seki-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
# Typed cross-tool environment contract — FleetStateVar owns the
# canonical TEAR_* / MADO_* env-var names this prompt reads (tear
# produces them from the same typed variants). The name lives in one
# place: a rename is a compile-time change on both sides of the fleet.
ishou-tokens.workspace = true

[lints]
workspace = true
