[package]
name = "seki-shikumi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "seki-shikumi — TieredConfig impl + tier loader for SekiConfig"

[dependencies]
seki-core.workspace = true
shikumi.workspace = true
serde.workspace = true
serde_yaml.workspace = true
# ishou-tokens — the BORN Borealis palette. The prescribed prompt
# resolves every accent from a Borealis token, never a hand-authored hex.
ishou-tokens.workspace = true

[dev-dependencies]
# Grid-alignment forcing function: the prescribed default prompt must
# contain no double-width (emoji) glyph. See the `prescribed_default_*`
# tests in lib.rs.
unicode-width.workspace = true

[lints]
workspace = true
